2008-03-24  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by NOBODY.
        
        SquirrelFish lives.
        
        Initial check-in of the code I've been carrying around. Lots of stuff
        doesn't work. Plus a bunch of empty files.

2008-05-12  Mark Rowe  <mrowe@apple.com>

        Reviewed by Tim Hatcher.

        <rdar://problem/4859666> WebKit needs availability macros in order to deprecate APIs

        Create WebKit availability macros that key off the Mac OS X version being targeted to
        determine the WebKit version being targeted.  Applications can define
        WEBKIT_VERSION_MIN_REQUIRED before including WebKit headers in order to target a specific
        version of WebKit.

        The availability header is being added to JavaScriptCore rather than WebKit as JavaScriptCore
        is the lowest-level portion of the public WebKit API.

        * API/WebKitAvailability.h: Added.
        * JavaScriptCore.xcodeproj/project.pbxproj:

2008-05-12  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Maciej.

        https://bugs.webkit.org/show_bug.cgi?id=18828
        Reproducible crash with PAC file

        Naively moving JavaScriptCore into thread-specific data was inappropriate in the face of
        exiting JavaScriptCore API clients, which expect a different therading model. Temporarily
        disabling ThreadSpecific implementation until this can be sorted out.

        * wtf/ThreadSpecific.h:
        (WTF::::ThreadSpecific):
        (WTF::::~ThreadSpecific):
        (WTF::::get):
        (WTF::::set):

2008-05-12  Alexey Proskuryakov  <ap@webkit.org>

        Roll out recent  threading changes (r32807, r32810, r32819, r32822) to simplify
        SquirrelFish merging.

        * API/JSBase.cpp:
        (JSGarbageCollect):
        * API/JSCallbackObjectFunctions.h:
        (KJS::::staticFunctionGetter):
        * API/JSClassRef.cpp:
        (OpaqueJSClass::prototype):
        * API/JSObjectRef.cpp:
        (JSObjectMake):